--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-        "@google/generative-ai": "^0.21.0",
-
+    "@google/generative-ai": "^0.21.0"
   }
 }
